[project]
name = "nebula-core"
version = "2.0.1"
description = "Nebula is a lightweight Python backend framework with middleware and routing, built on top of the werkzeug. It allows you to create web applications quickly with simple, decorator-based routing."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VxidDev"},
    {name = "amogus-gggy"}
]
requires-python = ">=3.10"

dependencies = [
    "werkzeug",
    "jinja2",
    "python-socketio",
    "eventlet"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nebula*"]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/VxidDev/nebula"