[project]
name = "nebula-core"
version = "3.3.0"
description = "Nebula is a lightweight ASGI-based Python web framework that provides simple, decorator-based routing and middleware support for building fast, asynchronous web applications."
readme = "README.md"
license = {text = "MIT"}

authors = [
    {name = "VxidDev"},
    {name = "amogus-gggy"}
]

requires-python = ">=3.10"

dependencies = [
    "jinja2",
    "python-socketio[asgi]",
    "uvicorn",
    "orjson"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nebula*"]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/VxidDev/nebula"